added total price of cars and average make year

--- a/templates/index_css.html
+++ b/templates/index_css.html
@@ -42,6 +42,14 @@
         </td>
     </tr>
     {% endfor %}
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Avg year: {{ avg_year }}</td>
+        <td>Total: {{ price_sum }}</td>
+    </tr>
 </table>
 </body>
 </html>
