Named one cell "all cars"

--- a/templates/index_css.html
+++ b/templates/index_css.html
@@ -44,7 +44,7 @@
     {% endfor %}
     <tr>
         <td></td>
-        <td></td>
+        <td>All cars</td>
         <td></td>
         <td></td>
         <td>Avg year: {{ avg_year }}</td>
