--- a/templates/edit_car.html
+++ b/templates/edit_car.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+
+{% block content %}
 <head>
-    <meta charset="UTF-8">
     <title>{{ car.make }} {{ car.model }} {{ car.year }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
-<body>
 <h4>{{ car.make }} {{ car.model }} {{ car.year }} editing</h4>
 <h4>Leave values as they are if you don't want to change them</h4>
 <form action="" method="post">
@@ -24,5 +22,4 @@
   <p><input type="submit" value="Save and go back"></p>
 </form>
 <p><a href="/">BACK</a></p>
-</body>
-</html>
+{% endblock %}
