--- a/templates/new_car.html
+++ b/templates/new_car.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+
+{% block content %}
 <head>
-    <meta charset="UTF-8">
     <title>New Vehicle</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
-<body>
 <h4>Create a new vehicle ad</h4>
 <form action="/vehicle/new" method="post">
     <p>Car make:</p>
@@ -23,5 +21,4 @@
     <p><input type="submit" value="Create new"></p>
 </form>
 <p><a href="/">BACK</a></p>
-</body>
-</html>
+{% endblock %}
